# Tess

./: .gitignore  PKGBUILD  README.md  Tess.desktop  appintess.desktop  default_theme  main.js  package-lock.json  package.json  postcss.config.cjs  setup.iss  tesshere.desktop  tsconfig.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: CreateDebianPackage.yml  CreatePacmanPackage.yml  CreateRPMPackage.yml  Release.yml  UpdateAUR.yml  UpdateTessAUR.yml  UpdateTessNightlyAUR.yml  createRPMPackage.yml  main.yml  release.yml  test.yml
class/: color.js  osinfo.js
cli/: CMakeCache.txt  CMakeLists.txt  Makefile  appicon.rc  cmake_install.cmake  main.cpp  xmake.lua
cli/Class/: CMakeLists.txt  Error.cpp  Error.hpp  Extension.cpp  Extension.hpp  Loader.cpp  Loader.hpp  Makefile  cmake_install.cmake  extention.cpp  extention.hpp
cli/Lib/: CMakeLists.txt  Makefile  Manager.cpp  Manager.hpp  cmake_install.cmake
cli/Utils/: ArgsHandler.cpp  CMakeLists.txt  Constant.cpp  Constant.hpp  Constants.cpp  Constants.hpp  Cross.cpp  Makefile  ProgressBar.cpp  ProgressBar.hpp  argsHandler.cpp  argsHandler.hpp  cmake_install.cmake  cross.cpp  cross.hpp
config/: .config  tess.config
config/theme/: dracula.json  tokyo-night.json
man/fr/man1/: tess-cli.1  tess.1
package/debian/tess/DEBIAN/: control  postinst
package/debian/tess/usr/share/applications/: Tess.desktop
package/debian/tess/usr/share/kservices5/ServicesMenus/: appintess.desktop
package/debian/tess/usr/share/man/en/man1/: tess-cli.1
src/: app.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  Cross.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  main.rs  pty.rs
src-tauri/src/command/: app.rs  mod.rs  option.rs  term.rs  window.rs
src-tauri/src/common/: consts.rs  error.rs  errors.rs  mod.rs  option.rs  payloads.rs  states.rs  theme.rs  title_formatter.rs  types.rs  utils.rs
src-tauri/src/common/commands/: mod.rs  pty.rs  utils.rs  window.rs
src-tauri/src/configuration/: deserialized.rs  mod.rs  partial.rs  types.rs
src-tauri/src/pty/: mod.rs  pty.rs  utils.rs
src-tauri/src/state/: mod.rs  pty_manager.rs
src/ConfigForm/: index.css  index.html
src/customElement/dropDown/: dropDown.js  style.css
src/customElement/filePicker/: filePicker.js  style.css
src/customElement/scroller-picker/: scrollerPicker.js  style.css
src/customElement/shortcutPicker/: shortcutPicker.js  style.css
src/customElement/switchButton/: style.css  switchButton.js
src/page/app/: app.js  index.html  quick-menu.css  style.css
src/page/config/: config.css  config.html  config.js
src/style/: animation.scss  constants.scss  popup.scss  style.scss  tab.scss  term.scss  titlebar.scss  toasts.scss
src/ts/: app.ts  main.ts
src/ts/class/: panes.ts  popup.ts  tab.ts  terminal.ts  views.ts
src/ts/manager/: popup.ts  shortcuts.ts  tabs.ts  toast.ts  view.ts
src/ts/schema/: option.ts  term.ts
src/ui/customElement/dropDown/: dropDown.js  style.css
src/ui/customElement/filePicker/: filePicker.js  style.css
src/ui/customElement/scroller-picker/: scrollerPicker.js  style.css
src/ui/customElement/switchButton/: style.css
src/ui/customElement/titleBarButton/: KDE-titlebar.css  cinnamon-titlebar.css  style.css  titleBarButton.js
src/ui/page/app/: KDE-titlebar.css  adwaita-titlebar.css  app.js  cinnamon-titlebar.css  index.html  quick-menu.css  style.css  titleBarButton.css
src/ui/page/config/: config.css  config.html  config.js
src/utils/: color.js  osinfo.js
tess-git/: .SRCINFO  PKGBUILD
tess-nightly-git/: PKGBUILD
theme/: dracula-v2.json
worker/: discord-rpc.js
