[package]
name = "tess"
version = "0.7.0-alpha.4"
description = "Fast. Lightweight. Famous. Terminal for the new era."
authors = ["Squitch"]
repository = "https://github.com/SquitchYT/Tess"
edition = "2021"
rust-version = "1.57"
homepage = "https://tessapp.net"
license = "Mozilla Public License 2.0"
categories = ["development-tools"]

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }
portable-pty = "0.7.0"
infer = "0.12.0"
notify = "5.1.0"
tokio = "1.25.0"
dirs-next = "2.0.0"
uuid = "1.3.0"

[target.'cfg(windows)'.dependencies]
lazy_static = "1.4.0"
regex = "1.8.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
