[package]
name = "tess"
version = "0.7.0-alpha.5"
description = "Fast. Lightweight. Famous. Terminal for the new era."
authors = ["Squitch"]
repository = "https://github.com/SquitchYT/Tess"
edition = "2021"
rust-version = "1.57"
homepage = "https://tessapp.net"
license = "Mozilla Public License 2.0"
categories = ["development-tools"]

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["clipboard-all", "protocol-asset"] }
portable-pty = "0.8.1"
infer = "0.12.0"
tokio = { version = "1.25.0", features = ["full"] }
dirs-next = "2.0.0"
uuid = "1.3.0"
remoteprocess = "0.4.11"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures = "0.3.29"

[target.'cfg(windows)'.dependencies]
lazy_static = "1.4.0"
regex = "1.8.4"
window-vibrancy = "0.3.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
