[package]
name = "tess"
version = "0.7.0-alpha.9"
description = "Fast. Lightweight. Famous. Terminal for the new era."
authors = ["Squitch"]
repository = "https://github.com/SquitchYT/Tess"
edition = "2021"
rust-version = "1.57"
homepage = "https://tessapp.net"
license = "Mozilla Public License 2.0"
categories = ["development-tools"]

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["clipboard-all", "protocol-asset"] }
portable-pty = "0.8.1"
infer = "0.12.0"
tokio = { version = "1.25.0", features = ["full"] }
dirs-next = "2.0.0"
uuid = "1.3.0"
thiserror = "1.0.50"
lazy_static = "1.4.0"
regex-lite = "0.1.5"
vt100 = "0.15.2"
futures = "0.3.29"


[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }

[target.'cfg(windows)'.dependencies]
window-vibrancy = "0.3.2"
windows = { version = "^0.51.0", features = ["Win32_Foundation", "Win32_System", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics"] }
windows-native = "1.0.40"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
